--- a/mainForm.ui
+++ b/mainForm.ui
@@ -6,24 +6,42 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>999</width>
-    <height>524</height>
+    <width>1176</width>
+    <height>605</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Kokos.pl</string>
+  </property>
+  <property name="autoFillBackground">
+   <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QWidget" name="">
+   <property name="font">
+    <font>
+     <family>TeXGyreCursor</family>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <italic>true</italic>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="autoFillBackground">
+    <bool>false</bool>
+   </property>
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>11</x>
       <y>15</y>
-      <width>971</width>
-      <height>441</height>
+      <width>1081</width>
+      <height>491</height>
      </rect>
     </property>
     <layout class="QGridLayout" name="gridLayout">
+     <property name="sizeConstraint">
+      <enum>QLayout::SetMaximumSize</enum>
+     </property>
      <item row="0" column="0">
       <widget class="QTableView" name="TableView">
        <property name="autoFillBackground">
@@ -46,6 +64,15 @@
         <layout class="QVBoxLayout" name="verticalLayout">
          <item>
           <widget class="QLabel" name="ValueText">
+           <property name="font">
+            <font>
+             <family>TeXGyreCursor</family>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Ile chcesz zainwestować?</string>
            </property>
@@ -56,6 +83,11 @@
          </item>
          <item>
           <widget class="QSpinBox" name="ValueBox">
+           <property name="font">
+            <font>
+             <pointsize>12</pointsize>
+            </font>
+           </property>
            <property name="minimum">
             <number>50</number>
            </property>
@@ -73,6 +105,15 @@
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
           <widget class="QLabel" name="MonthNumberText">
+           <property name="font">
+            <font>
+             <family>TeXGyreCursor</family>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Max. liczba miesięcy?</string>
            </property>
@@ -83,6 +124,13 @@
          </item>
          <item>
           <widget class="QSpinBox" name="MonthNumberBox">
+           <property name="font">
+            <font>
+             <family>TeXGyreBonum</family>
+             <pointsize>12</pointsize>
+             <italic>true</italic>
+            </font>
+           </property>
            <property name="minimum">
             <number>1</number>
            </property>
@@ -97,6 +145,15 @@
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
           <widget class="QLabel" name="GainText">
+           <property name="font">
+            <font>
+             <family>TeXGyreCursor</family>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Zysk</string>
            </property>
@@ -107,6 +164,13 @@
          </item>
          <item>
           <widget class="QSpinBox" name="GainBox">
+           <property name="font">
+            <font>
+             <family>TeXGyreBonum</family>
+             <pointsize>12</pointsize>
+             <italic>true</italic>
+            </font>
+           </property>
            <property name="minimum">
             <number>1</number>
            </property>
@@ -121,6 +185,15 @@
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
           <widget class="QLabel" name="RiskText">
+           <property name="font">
+            <font>
+             <family>TeXGyreCursor</family>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Ryzyko</string>
            </property>
@@ -131,6 +204,13 @@
          </item>
          <item>
           <widget class="QSpinBox" name="RiskBox">
+           <property name="font">
+            <font>
+             <family>TeXGyreBonum</family>
+             <pointsize>12</pointsize>
+             <italic>true</italic>
+            </font>
+           </property>
            <property name="minimum">
             <number>1</number>
            </property>
@@ -145,6 +225,15 @@
         <layout class="QVBoxLayout" name="verticalLayout_6">
          <item>
           <widget class="QLabel" name="KeyText">
+           <property name="font">
+            <font>
+             <family>TeXGyreCursor</family>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Twój klucz WebAPI</string>
            </property>
@@ -154,7 +243,15 @@
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="KeyBox"/>
+          <widget class="QLineEdit" name="KeyBox">
+           <property name="font">
+            <font>
+             <family>TeXGyreBonum</family>
+             <pointsize>12</pointsize>
+             <italic>true</italic>
+            </font>
+           </property>
+          </widget>
          </item>
         </layout>
        </item>
@@ -165,16 +262,28 @@
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Preferred</enum>
+           </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>40</width>
-             <height>20</height>
+             <width>0</width>
+             <height>0</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <widget class="QPushButton" name="SearchButton">
+           <property name="font">
+            <font>
+             <family>TeXGyreCursor</family>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <italic>true</italic>
+             <bold>true</bold>
+            </font>
+           </property>
            <property name="text">
             <string>Szukaj</string>
            </property>
@@ -185,10 +294,13 @@
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
+           <property name="sizeType">
+            <enum>QSizePolicy::Preferred</enum>
+           </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>40</width>
-             <height>20</height>
+             <width>0</width>
+             <height>0</height>
             </size>
            </property>
           </spacer>
@@ -199,22 +311,56 @@
      </item>
     </layout>
    </widget>
-   <zorder>TableView</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>layoutWidget</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>999</width>
+     <width>1176</width>
      <height>19</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuPlik">
+    <property name="title">
+     <string>Plik</string>
+    </property>
+    <addaction name="actionAktualizuj_Baze_Danych"/>
+    <addaction name="separator"/>
+    <addaction name="actionZako_cz"/>
+   </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Pomoc</string>
+    </property>
+    <addaction name="actionO_Autorach"/>
+    <addaction name="separator"/>
+    <addaction name="actionPomoc"/>
+   </widget>
+   <addaction name="menuPlik"/>
+   <addaction name="menuHelp"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <action name="actionAktualizuj_Baze_Danych">
+   <property name="text">
+    <string>Aktualizuj Baze Danych</string>
+   </property>
+  </action>
+  <action name="actionZako_cz">
+   <property name="text">
+    <string>Zakończ</string>
+   </property>
+  </action>
+  <action name="actionO_Autorach">
+   <property name="text">
+    <string>O Autorach</string>
+   </property>
+  </action>
+  <action name="actionPomoc">
+   <property name="text">
+    <string>O programie</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
