--- a/mainForm.ui
+++ b/mainForm.ui
@@ -2,13 +2,28 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1176</width>
-    <height>605</height>
+    <width>1200</width>
+    <height>600</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1200</width>
+    <height>600</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Kokos.pl</string>
@@ -16,7 +31,16 @@
   <property name="autoFillBackground">
    <bool>false</bool>
   </property>
+  <property name="locale">
+   <locale language="Polish" country="Poland"/>
+  </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="maximumSize">
+    <size>
+     <width>1200</width>
+     <height>600</height>
+    </size>
+   </property>
    <property name="font">
     <font>
      <family>TeXGyreCursor</family>
@@ -317,7 +341,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1176</width>
+     <width>1200</width>
      <height>19</height>
     </rect>
    </property>
@@ -362,7 +386,9 @@
    </property>
   </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="kokos.jpg"/>
+ </resources>
  <connections/>
  <slots>
   <slot>search()</slot>
