--- a/mainForm.ui
+++ b/mainForm.ui
@@ -186,6 +186,9 @@
            <property name="maximum">
             <number>48</number>
            </property>
+           <property name="value">
+            <number>12</number>
+           </property>
           </widget>
          </item>
         </layout>
@@ -237,13 +240,16 @@
             </font>
            </property>
            <property name="minimum">
-            <number>10</number>
+            <number>1</number>
            </property>
            <property name="maximum">
             <number>1000000</number>
            </property>
            <property name="singleStep">
             <number>10</number>
+           </property>
+           <property name="value">
+            <number>1</number>
            </property>
           </widget>
          </item>
